--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -18,7 +18,7 @@ import Layout from "../layouts/Layout.astro";
           <span class="journal">
             International Workshop on Antenna Technoloy 2024,
           </span>
-          <span class="status">under review, submitted Dec. 2023.</span>
+          <span class="status">, accepted Jan, 2024.</span>
         </li>
 
         <li>
@@ -72,7 +72,7 @@ import Layout from "../layouts/Layout.astro";
       </ol>
     </div>
   </main>
-</Layout>
+</Layout> 
 
 <style>
   .publications {
