--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,10 +23,12 @@ import ProfileImage from "../images/me.jpeg";
         Andrew J. Park received his B.S. (Received the Dean’s award for
         graduating first rank in electronic engineering) and M.S. degrees in
         Electronic Engineering from <a
-          href="http://ael.khu.ac.kr"
+          href="https://www.khu.ac.kr/"
           target="_blank">Kyung Hee University</a
-        > in 2019 and 2021, respectively. From 2017 to 2021, he worked in the
-        Applied Electromagnetics Lab at Kyung Hee University. During this
+        > in 2019 and 2021, respectively. From 2017 to 2021, he worked in the <a
+          href="http://ael.khu.ac.kr"
+          target="_blank">Applied Electromagnetics Lab</a
+        > at Kyung Hee University. During this
         period, he helped develop an AESA radar-integrated M&S software
         supported by the Agency for Defense Development (ADD). His work also
         includes a microwave method to remotely assess the abdominal fat
