--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -9,7 +9,7 @@ import Layout from "../layouts/Layout.astro";
       <ol>
         <li>
           <span class="author">
-            A. J. Park, C. C. Pfeiffer, A. A. Chabanov, and A. Grbic,
+            A. J. Park, C. Pfeiffer, A. A. Chabanov, and A. Grbic,
           </span>
           <span class="title">
             "Simultaneous transmit-receive horn antenna based on a nonreciprocal
