--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -16,7 +16,7 @@ import Layout from "../layouts/Layout.astro";
             metasurface with embedded magnetic bias",
           </span>
           <span class="journal">
-            International Workshop on Antenna Technoloy 2024,
+            International Workshop on Antenna Technology 2024,
           </span>
           <span class="status">, accepted Jan, 2024.</span>
         </li>
