--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -7,18 +7,41 @@ import Layout from "../layouts/Layout.astro";
     <h1>Publications</h1>
     <div class="publications">
       <ol>
+      <li>
+          <span class="author">
+            A. J. Park, C. Pfeiffer, A. A. Chabanov, and A. Grbic,
+          </span>
+          <span class="title">
+            "Simulations and Measurements of a Simultaneous Transmit and Receive Antenna Based on a Passive Nonreciprocal Metasurface with Embedded Magnetic Bias",
+          </span>
+          <span class="journal">
+            ”, IEEE Transactions on Antennas and Propagation,
+          </span>
+          <span class="status">, under review Mar, 2025.</span>
+        </li>
+      <li>
+          <span class="author">
+            A. J. Park, C. Pfeiffer, and A. Grbic,
+          </span>
+          <span class="title">
+            "Passive Nonreciprocal Metasurface with Embedded Magnetic Bias that Exhibits Faraday Rotation",
+          </span>
+          <span class="journal">
+            IEEE Transactions on Antennas and Propagation,
+          </span>
+          <span class="status">, under review Mar, 2025.</span>
+        </li>
+
         <li>
           <span class="author">
-            A. J. Park, C. C. Pfeiffer, A. A. Chabanov, and A. Grbic,
+            A. J. Park, C. Pfeiffer, A. A. Chabanov, and A. Grbic,
           </span>
           <span class="title">
             "Simultaneous transmit-receive horn antenna based on a nonreciprocal
             metasurface with embedded magnetic bias",
           </span>
           <span class="journal">
-            International Workshop on Antenna Technoloy 2024,
-          </span>
-          <span class="status">, accepted Jan, 2024.</span>
+            International Workshop on Antenna Technology 2024, pp. 43-46, Apr, 2024.</span>
         </li>
 
         <li>
