--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -15,9 +15,9 @@ import Layout from "../layouts/Layout.astro";
             "Simulations and Measurements of a Simultaneous Transmit and Receive Antenna Based on a Passive Nonreciprocal Metasurface with Embedded Magnetic Bias",
           </span>
           <span class="journal">
-            ”, IEEE Transactions on Antennas and Propagation,
+            IEEE Transactions on Antennas and Propagation
           </span>
-          <span class="status">, under review Mar, 2025.</span>
+          <span class="status"> under review Mar, 2025.</span>
         </li>
       <li>
           <span class="author">
@@ -27,9 +27,9 @@ import Layout from "../layouts/Layout.astro";
             "Passive Nonreciprocal Metasurface with Embedded Magnetic Bias that Exhibits Faraday Rotation",
           </span>
           <span class="journal">
-            IEEE Transactions on Antennas and Propagation,
+            IEEE Transactions on Antennas and Propagation
           </span>
-          <span class="status">, under review Mar, 2025.</span>
+          <span class="status"> under review Mar, 2025.</span>
         </li>
 
         <li>
