--- a/src/pages/honors-and-awards.astro
+++ b/src/pages/honors-and-awards.astro
@@ -19,11 +19,165 @@ import UnderConstructionImage from "../images/under-constructions.png";
           <span class="link">
             <a
           href="https://ece.engin.umich.edu/stories/andrew-park-wins-iwat-student-paper-award-for-work-on-star-antennas"
-          target="_blank">University of Michigan news,</a
+          target="_blank">University of Michigan news</a
           >,
           </span>
           <span class="date"> 
-          Apr, 2025
+          Apr. 2025
+          </span>
+        </li>
+        <li>
+          <span class="scholorship">
+            Entrance Examination Scholarship (Admission with highest distinction, 100% of tuition),
+          </span>
+          <span class="location">
+            Kyung Hee University,
+          </span>
+          <span class="date"> 
+          2019 & 2020
+          </span>
+        </li>
+        <li>
+          <span class="scholorship">
+            BK21plus Scholarship,
+          </span>
+          <span class="location">
+            BrainKorea21,
+          </span>
+          <span class="date"> 
+          2019 & 2020
+          </span>
+        </li>
+        <li>
+          <span class="award">
+            Dean’s Award,
+          </span>
+          <span class="location">
+            Kyung Hee University,
+          </span>
+          <span class="date"> 
+          Feb. 2019
+          </span>
+        </li>
+        <li>
+          <span class="scholorship">
+            National Science & Technology Scholarship (100% tuition),
+          </span>
+          <span class="location">
+            Korea Student Aid Foundation,
+          </span>
+          <span class="date"> 
+          2017 to 2018
+          </span>
+        </li>
+        <li>
+          <span class="award">
+            		Graduation Project Award (First Prize)
+          </span>
+          <span class="location">
+            Kyung Hee University,
+          </span>
+          <span class="date"> 
+          Jul. 2018
+          </span>
+        </li>
+        <li>
+          <span class="scholorship">
+            Bright Society Scholarship (International Training Program),
+          </span>
+          <span class="location">
+            Kyung Hee University,
+          </span>
+          <span class="date"> 
+          2017
+          </span>
+        </li>
+        <li>
+          <span class="scholorship">
+            Merit-based Scholarship (2nd in class, 50% of tuition),
+          </span>
+          <span class="location">
+            Kyung Hee University,
+          </span>
+          <span class="date"> 
+          2017 1st semester
+          </span>
+        </li>
+        <li>
+          <span class="award">
+            		Book Review Contest (First Prize),
+          </span>
+          <span class="location">
+            Republic of Korea Army,
+          </span>
+          <span class="date"> 
+          May 2016
+          </span>
+        </li>
+        <li>
+          <span class="award">
+            		Fundamental Engineering Design Award (First Prize),
+          </span>
+          <span class="location">
+            Kyung Hee University,
+          </span>
+          <span class="date"> 
+          Sep. 2014
+          </span>
+        </li>
+        <li>
+          <span class="scholorship">
+            Merit-based Scholarship (33% of tuition),
+          </span>
+          <span class="location">
+            Kyung Hee University,
+          </span>
+          <span class="date"> 
+          2014 2nd semester
+          </span>
+        </li>
+        <li>
+          <span class="award">
+            		Academic Achievement Award,
+          </span>
+          <span class="location">
+            Kyung Hee University,
+          </span>
+          <span class="date"> 
+          Apr. 2014
+          </span>
+        </li>
+        <li>
+          <span class="scholorship">
+            Merit-based Scholarship (1st in class, 100% of tuition),
+          </span>
+          <span class="location">
+            Kyung Hee University,
+          </span>
+          <span class="date"> 
+          2014 1st semester
+          </span>
+        </li>
+        <li>
+          <span class="award">
+            		Academic Achievement Award,
+          </span>
+          <span class="location">
+            Kyung Hee University,
+          </span>
+          <span class="date"> 
+          Oct. 2013
+          </span>
+        </li>
+        <li>
+          <span class="scholorship">
+            Merit-based Scholarship (35% of tuition),
+          </span>
+          <span class="location">
+            Kyung Hee University,
+          </span>
+          <span class="date"> 
+          2013 2nd semester
           </span>
         </li>
       </ol>
@@ -54,6 +208,9 @@ import UnderConstructionImage from "../images/under-constructions.png";
       }
 
       /* .award { */
+      /*   color: Blue; */
+      /* } */
+      /* .scholorship { */
       /*   color: Blue; */
       /* } */
       /* .location { */
