--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -17,7 +17,7 @@ import Layout from "../layouts/Layout.astro";
           <span class="journal">
             IEEE Transactions on Antennas and Propagation
           </span>
-          <span class="status"> under review Mar, 2025.</span>
+          <span class="status"> under review Mar. 2025.</span>
         </li>
       <li>
           <span class="author">
@@ -29,7 +29,7 @@ import Layout from "../layouts/Layout.astro";
           <span class="journal">
             IEEE Transactions on Antennas and Propagation
           </span>
-          <span class="status"> under review Mar, 2025.</span>
+          <span class="status"> under review Mar. 2025.</span>
         </li>
 
         <li>
@@ -41,7 +41,7 @@ import Layout from "../layouts/Layout.astro";
             metasurface with embedded magnetic bias",
           </span>
           <span class="journal">
-            International Workshop on Antenna Technology 2024, pp. 43-46, Apr, 2024.</span>
+            International Workshop on Antenna Technology 2024, pp. 43-46, Apr. 2024.</span>
         </li>
 
         <li>
