--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,19 +1,23 @@
 ---
-// Props passed to the layout
-const { title, children } = Astro.props;
+import "../styles/GlobalStyles.astro";
+
+import Header from "../components/Header.astro";
+// import Footer from "../components/Footer.astro";
+
+const { pageTitle } = Astro.props;
 ---
 
-<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{title}</title>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{pageTitle}</title>
   </head>
-  <body>
-    <header>
-      <h2>{title}</h2>
-    </header>
-    {children}
+  <body id="root">
+    <Header />
+    <slot />
+    {/*<Footer />*/}
   </body>
 </html>
