--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,81 +1,69 @@
 ---
 import { Picture } from "astro:assets";
+
 import Layout from "../layouts/Layout.astro";
+import MetasurfaceImage from "../images/metasurface.png";
+import Metasurface2Image from "../images/metasurface2.png";
+import LensImage from "../images/lens.png";
+import AbdominalFatThicknessImage from "../images/abdominal-fat-thickness.png";
+import GlucoseMonitoringMcuImage from "../images/glucose_monitoring_MCU.png";
 import ProfileImage from "../images/me.jpeg";
 ---
 
 <Layout title="Andy">
   <main>
+    <!-- <Picture src={MetasurfaceImage} alt="Metasurface" /> -->
+    <!-- <Picture src={Metasurface2Image} alt="Metasurface" /> -->
+    <!-- <Picture src={LensImage} alt="Lens" /> -->
+    <!-- <Picture src={AbdominalFatThicknessImage} alt="Abdominal Fat Thickness" /> -->
+    <!-- <Picture src={GlucoseMonitoringMcuImage} alt="Glucose Monitoring MCU" /> -->
     <h1>Home</h1>
     <div class="about">
       <div class="bio">
-        <p>
-          Andrew J. Park received his B.S. (Received the Dean’s award for
-          graduating first rank in electronic engineering) and M.S. degrees in
-          Electronic Engineering from
-          <a href="https://www.khu.ac.kr/" target="_blank">Kyung Hee University</a>
-          in 2019 and 2021, respectively. From 2017 to 2021, he worked in the
-          <a href="http://ael.khu.ac.kr" target="_blank">Applied Electromagnetics Lab</a>
-          at Kyung Hee University. During this period, he helped develop an AESA
-          radar-integrated M&S software supported by the Agency for Defense Development (ADD).
-          His work also includes a microwave method to remotely assess the abdominal fat
-          thickness and glucose real-time monitoring. He joined
-          <a href="https://grbic.engin.umich.edu" target="_blank">Dr. Grbic’s lab</a>
-          as a Ph.D. student in June 2022. His current research interests
-          include applied electromagnetics, metasurfaces, and radar technologies.
-        </p>
+        Andrew J. Park received his B.S. (Received the Dean’s award for
+        graduating first rank in electronic engineering) and M.S. degrees in
+        Electronic Engineering from <a
+          href="https://www.khu.ac.kr/"
+          target="_blank">Kyung Hee University</a
+        > in 2019 and 2021, respectively. From 2017 to 2021, he worked in the <a
+          href="http://ael.khu.ac.kr"
+          target="_blank">Applied Electromagnetics Lab</a
+        > at Kyung Hee University. During this
+        period, he helped develop an AESA radar-integrated M&S software
+        supported by the Agency for Defense Development (ADD). His work also
+        includes a microwave method to remotely assess the abdominal fat
+        thickness and glucose real-time monitoring. He joined <a
+          href="grbic.engin.umich.edu"
+          target="_blank">Dr. Grbic’s lab</a
+        > as a Ph.D. student in June 2022. His current research interests
+        include applied electromagnetics, metasurfaces, and radar technologies.
       </div>
-      <div class="image-wrapper">
+      <div>
         <Picture src={ProfileImage} alt="My profile image" class="profile" />
       </div>
     </div>
   </main>
+</Layout>
 
-  <style>
-    .about {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 2rem;
-      gap: 2rem;
-      flex-wrap: wrap;
-    }
+<style>
+  .about {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
     .bio {
-      flex: 1;
-      min-width: 300px;
-      font-size: 1rem;
-      line-height: 1.6;
-    }
-
-    .image-wrapper {
-      display: flex;
-      justify-content: center;
-      flex: 0 0 auto;
-    }
-
-    .profile {
-      border-radius: 50%;
-      width: 300px;
-      height: 300px;
-      object-fit: cover;
+      padding: 40px;
     }
 
     @media (max-width: 768px) {
-      .about {
-        flex-direction: column;
-        align-items: center;
-        padding: 1rem;
-      }
-
-      .profile {
-        width: 200px;
-        height: 200px;
-      }
-
-      .bio {
-        text-align: center;
-      }
+      flex-direction: column;
     }
-  </style>
-</Layout>
+  }
+
+  .profile {
+    display: flex;
+    border-radius: 50%;
+    width: 500px;
+    height: 500px;
+  }
+</style>
