--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,14 +5,30 @@
 <header>
   <nav>
     <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#news">News</a></li>
-      <li><a href="/publications">Publications</a></li>
-      <li><a href="/research">Research</a></li>
-      <li><a href="/honors-and-awards">Honors and Awards</a></li>
-      <li><a href="/projects">Projects</a></li>
-      <li><a href="/cv">CV</a></li>
-      <li><a href="/contact">Contact</a></li>
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <a href="/news">News</a>
+      </li>
+      <li>
+        <a href="/publications">Publications</a>
+      </li>
+      <li>
+        <a href="/research">Research</a>
+      </li>
+      <li>
+        <a href="/honors-and-awards">Honors and Awards</a>
+      </li>
+      <li>
+        <a href="/projects">Projects</a>
+      </li>
+      <li>
+        <a href="/cv">CV</a>
+      </li>
+      <li>
+        <a href="/contact">Contact</a>
+      </li>
     </ul>
   </nav>
 </header>
