--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -27,11 +27,18 @@ import Layout from "../layouts/Layout.astro";
             "Passive Nonreciprocal Metasurface with Embedded Magnetic Bias that Exhibits Faraday Rotation",
           </span>
           <span class="journal">
-            IEEE Transactions on Antennas and Propagation
-          </span>
-          <span class="status"> under review Mar. 2025.</span>
+            IEEE Transactions on Antennas and Propagation, vol. 73, no. 10, pp. 7899-7907, Oct. 2025
         </li>
-
+      <li>
+          <span class="author">
+            A. J. Park, C. Pfeiffer, and A. Grbic,
+          </span>
+          <span class="title">
+            "A Circular Waveguide Antenna Array Integrated with a Nonreciprcoal Metasurface",
+          </span>
+          <span class="journal">
+             IEEE International Symposium on Antennas & Propagation and North American Radio Science Meeting, Ottawa, Canada, Jul. 13 – 18, 2025
+        </li>
         <li>
           <span class="author">
             A. J. Park, C. Pfeiffer, A. A. Chabanov, and A. Grbic,
